--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <button class="btn" onclick="openLink(700431688)">Getsuga</button>
             <button class="btn" onclick="openLink(718149053)">Farewell</button>
             <button class="btn" onclick="openLink(700592438)">Ammiteus</button>
+            <button class="btn" onclick="openLink(719764104)">Zhyd</button>
         </div>
         
         <div class="links">
