--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         fetch('promocodes.json')
           .then(async response => {
             const text = await response.text();
+            console.log(text);
             if (!text) return []; // если файл пустой
             try {
               return JSON.parse(text);
