--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         .btn:hover {
             background-color: #666;
         }
+
+        a{
+            color: white;
+        }
     </style>
 </head>
 <body>
