Добавил новый сайт с 0 циклов

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         h1 {
             background: linear-gradient(45deg, #6a11cb, #6a11cb);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         @media (max-width: 600px) {
@@ -118,7 +119,8 @@
             <a class="link-btn" href="https://homdgcat.wiki/sr/future" target="_blank">Сливы от HOMDGCAT</a>
             <a class="link-btn" href="https://starrailstation.com/en/characters" target="_blank">Все персы</a>
             <a class="link-btn" href="https://starrailstation.com/en/warp#char_event" target="_blank">Крутки</a>
-            <a class="link-btn" href="https://www.prydwen.gg/star-rail/tier-list" target="_blank">ТирЛист</a>
+            <a class="link-btn" href="https://www.prydwen.gg/star-rail/tier-list" target="_blank">Прайдвен TL</a>
+            <a class="link-btn" href="https://tuopaimf.com" target="_blank">0 циклов</a>
         </div>
 
         <div id="promocodes-container">
