--- a/index.html
+++ b/index.html
@@ -4,103 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сменные ссылки</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-            background: radial-gradient(circle, #1a1a2e, #16213e);
-            color: #ffffff;
-        }
-        .btn-container {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        .btn {
-            padding: 12px 25px;
-            cursor: pointer;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            background: linear-gradient(45deg, #6a11cb, #2575fc);
-            color: white;
-            transition: 0.3s;
-        }
-        .btn:hover {
-            background: linear-gradient(45deg, #2575fc, #6a11cb);
-        }
-        .links {
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-        }
-        .link-btn {
-            display: block;
-            padding: 12px;
-            text-decoration: none;
-            color: white;
-            font-size: 18px;
-            background: linear-gradient(45deg, #6a11cb, #2575fc);
-            border-radius: 5px;
-            text-align: center;
-            transition: 0.3s;
-        }
-        .link-btn:hover {
-            background: linear-gradient(45deg, #6a11cb, #2575fc);
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.1);
-        }
-        h1 {
-            background: linear-gradient(45deg, #6a11cb, #6a11cb);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        @media (max-width: 600px) {
-            .btn-container { flex-direction: column; }
-            .btn { width: 90%; padding: 15px; font-size: 18px; }
-        }
-
-        .btn-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 10px;
-            max-width: 300px;
-            margin: 0 auto;
-            padding: 10px;
-        }
-
-        .btn {
-            padding: 10px;
-            font-size: 14px;
-            background-color: #444;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-
-        .btn:hover {
-            background-color: #666;
-        }
-
-        a{
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -113,14 +17,19 @@
         </div>
         
         <div id="links" class="links">
-            <a class="link-btn" href="https://homdgcat.wiki/sr/shadow?lang=EN" target="_blank">Апок</a>
-            <a class="link-btn" href="https://homdgcat.wiki/sr/chaos?lang=EN" target="_blank">Зеркало</a>
-            <a class="link-btn" href="https://homdgcat.wiki/sr/fiction?lang=EN" target="_blank">ПФ</a>
-            <a class="link-btn" href="https://homdgcat.wiki/sr/future" target="_blank">Сливы от HOMDGCAT</a>
-            <a class="link-btn" href="https://starrailstation.com/en/characters" target="_blank">Все персы</a>
-            <a class="link-btn" href="https://starrailstation.com/en/warp#char_event" target="_blank">Крутки</a>
-            <a class="link-btn" href="https://www.prydwen.gg/star-rail/tier-list" target="_blank">Прайдвен TL</a>
             <a class="link-btn" href="https://tuopaimf.com" target="_blank">0 циклов</a>
+            <a class="link-btn" href="https://www.prydwen.gg/star-rail/tier-list" target="_blank">Tier List</a>
+            <div id="endgames">
+                <a class="link-btn" href="https://homdgcat.wiki/sr/shadow?lang=EN" target="_blank">Апок</a>
+                <a class="link-btn" href="https://homdgcat.wiki/sr/chaos?lang=EN" target="_blank">MOC</a>
+                <a class="link-btn" href="https://homdgcat.wiki/sr/fiction?lang=EN" target="_blank">ПФ</a>
+                <a class="link-btn" href="https://homdgcat.wiki/sr/arbitration/?lang=EN" target="_blank">King</a>
+            </div>
+            <a class="link-btn" href="https://homdgcat.wiki/sr/future" target="_blank">Сливы от HOMDGCAT</a>
+            <div id="database">
+                <a class="link-btn" href="https://starrailstation.com/en/characters" target="_blank">Персы</a>
+                <a class="link-btn" href="https://starrailstation.com/en/warp#char_event" target="_blank">Крутки</a>
+            </div>
         </div>
 
         <div id="promocodes-container">
@@ -129,40 +38,6 @@
 
     </div>
     
-    <script>
-        function openLink(id) {
-            window.open(`https://fribbels.github.io/hsr-optimizer#showcase?id=${id}`, '_blank');
-        }
-    </script> 
-    <script>
-        fetch('promocodes.json')
-          .then(async response => {
-            const text = await response.text();
-            if (!text) return []; // если файл пустой
-            try {
-              return JSON.parse(text);
-            } catch (e) {
-              console.error('Ошибка парсинга JSON:', e);
-              return [];
-            }
-          })
-          .then(data => {
-            const container = document.getElementById('promocodes-container');
-            if (!data.length) {
-              container.innerHTML = '<p>Пока нет активных промокодов.</p>';
-              return;
-            }
-            data.forEach(item => {
-              const codeElement = document.createElement('ul');
-              codeElement.innerHTML = `<li><a href="https://hsr.hoyoverse.com/gift?code=${item}" target="_blank">${item}</a></li>`;
-              container.appendChild(codeElement);
-            });
-          })
-          .catch(error => {
-            console.error('Ошибка загрузки промокодов:', error);
-            const container = document.getElementById('promocodes-container');
-            container.innerHTML = '<p>Не удалось загрузить промокоды.</p>';
-          });
-      </script>
+    <script src="scripts.js"></script>
 </body> 
 </html>
