Добавил историю баннеров

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Fribbels</h1>
-        <div id="fribbles-links" class="btn-container btn-grid">
-            <button class="btn" onclick="openLink(700431688)">Getsuga</button>
-            <button class="btn" onclick="openLink(718149053)">Farewell</button>
-            <button class="btn" onclick="openLink(700592438)">Ammiteus</button>
-            <button class="btn" onclick="openLink(719764104)">Zhyd</button>
+        <div id="fribbles">
+            <h1>Fribbels</h1>
+            <div id="fribbles-links" class="btn-container btn-grid">
+                <button class="btn" onclick="openLink(700431688)">Getsuga</button>
+                <button class="btn" onclick="openLink(718149053)">Farewell</button>
+                <button class="btn" onclick="openLink(700592438)">Ammiteus</button>
+                <button class="btn" onclick="openLink(719764104)">Zhyd</button>
+            </div>
         </div>
         
         <div id="links" class="links">
@@ -30,6 +32,7 @@
                 <a class="link-btn" href="https://starrailstation.com/en/characters" target="_blank">Персы</a>
                 <a class="link-btn" href="https://starrailstation.com/en/warp#char_event" target="_blank">Крутки</a>
             </div>
+            <a class="link-btn" href="/banner-history.html">История баннеров</a>
         </div>
 
         <div id="promocodes-container">
