--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="link-btn" href="https://starrailstation.com/en/characters" target="_blank">Персы</a>
                 <a class="link-btn" href="https://starrailstation.com/en/warp#char_event" target="_blank">Крутки</a>
             </div>
-            <a class="link-btn" href="/banner-history.html">История баннеров</a>
+            <a class="link-btn" href="/hsr_websites/banner-history.html">История баннеров</a>
         </div>
 
         <div id="promocodes-container">
